--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
     <section id="education" class="container section reveal" class="container section">
       <h2>Education</h2>
       <ul class="edu-list">
-        <li><strong>Cloud Computing Technologies</strong>, George Brown College, Toronto, Jan 2024 to Dec 2024</li>
-        <li><strong>Data Analytics</strong>, Durham College, Oshawa, Jan 2023 to Sep 2023</li>
-        <li><strong>BSc in Mathematics, Statistics, Physics</strong>, M.S. University of Baroda, India, Jun 2018 to May 2021</li>
+        <li><strong>Cloud Computing Technologies</strong> :George Brown College, Toronto (Jan 2024 to Dec 2024)</li>
+        <li><strong>Data Analytics</strong> :Durham College, Oshawa (Jan 2023 to Sep 2023)</li>
+        <li><strong>BSc in Mathematics, Statistics, Physics</strong> :M.S. University of Baroda, India (Jun 2018 to May 2021)</li>
       </ul>
     </section>
     <section id="certs" class="container section reveal" class="container section">
