--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
   </header>
 
   <main id="home">
+    <!-- HERO -->
     <section class="container hero">
       <div class="hero-text">
         <img src="profile.png" alt="Profile picture" class="profile-pic">
         <h1>Divy Limbachiya</h1>
-        <p class="subtitle">Certified Data professional with experience in building scalable data solutions and automated workflows.</p>
+        <p class="subtitle">
+          Certified Data professional with experience in building scalable data solutions and automated workflows.
+        </p>
 
         <div class="pill-row">
           <span class="pill">Ontario, Canada</span>
@@ -42,9 +45,9 @@
 
         <div class="socials">
           <a href="mailto:connect2.divy@gmail.com" aria-label="Email">
-            <!-- envelope svg -->
+            <!-- Envelope icon -->
             <svg class="ico" width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-              <path d="M3 7.5a2.5 2.5 0 0 1 2.5-2.5h13A2.5 2.5 0 0 1 21 7.5v9A2.5 2.5 0 0 1 18.5 19h-13A2.5 2.5 0 0 1 3 16.5v-9Z" stroke="currentColor" stroke-width="1.6" />
+              <path d="M3 7.5a2.5 2.5 0 0 1 2.5-2.5h13A2.5 2.5 0 0 1 21 7.5v9A2.5 2.5 0 0 1 18.5 19h-13A2.5 2.5 0 0 1 3 16.5v-9Z" stroke="currentColor" stroke-width="1.6"/>
               <path d="m4 7 8 6 8-6" stroke="currentColor" stroke-width="1.6" fill="none"/>
             </svg>
             Email
@@ -58,9 +61,10 @@
             GitHub
           </a>
         </div>
-      </div> <!-- hero-text -->
+      </div> <!-- close .hero-text -->
     </section>
 
+    <!-- rest of your page unchanged -->
     <section id="about" class="container section reveal" class="container section">
       <h2>About</h2>
       <p>
@@ -251,6 +255,7 @@
   <footer class="container footer">
     <p>&copy; <span id="year"></span> Divy Limbachiya. All rights reserved.</p>
   </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
