--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Divy Limbachiya | Data Engineer</title>
   <meta name="description" content="Portfolio of Divy Limbachiya, AWS Certified Data Engineer. Projects, experience, skills, and contact.">
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='18' fill='%230a0a0a'/%3E%3Ctext x='50' y='58' text-anchor='middle' font-family='Arial' font-size='44' fill='white'%3EDL%3C/text%3E%3C/svg%3E">
-  <!-- Keep only one CSS file. Simple, safe CSS. -->
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
 <body>
   <header class="container nav" aria-label="Main">
@@ -24,14 +24,11 @@
   </header>
 
   <main id="home">
-    <!-- HERO -->
     <section class="container hero">
       <div class="hero-text">
         <img src="profile.png" alt="Profile picture" class="profile-pic">
         <h1>Divy Limbachiya</h1>
-        <p class="subtitle">
-          Certified Data professional with experience in building scalable data solutions and automated workflows.
-        </p>
+        <p class="subtitle">Certified Data professional with experience in building scalable data solutions and automated workflows.</p>
 
         <div class="pill-row">
           <span class="pill">Ontario, Canada</span>
@@ -44,46 +41,216 @@
         </div>
 
         <div class="socials">
-          <a href="mailto:connect2.divy@gmail.com" aria-label="Email" class="social">
-            <!-- Envelope SVG -->
-            <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M3 7.5A2.5 2.5 0 0 1 5.5 5h13A2.5 2.5 0 0 1 21 7.5v9A2.5 2.5 0 0 1 18.5 19h-13A2.5 2.5 0 0 1 3 16.5v-9Z" fill="none" stroke="currentColor" stroke-width="1.6"/>
-              <path d="m4 7 8 6 8-6" fill="none" stroke="currentColor" stroke-width="1.6"/>
+          <a href="mailto:connect2.divy@gmail.com" aria-label="Email">
+            <!-- envelope svg -->
+            <svg class="ico" width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+              <path d="M3 7.5a2.5 2.5 0 0 1 2.5-2.5h13A2.5 2.5 0 0 1 21 7.5v9A2.5 2.5 0 0 1 18.5 19h-13A2.5 2.5 0 0 1 3 16.5v-9Z" stroke="currentColor" stroke-width="1.6" />
+              <path d="m4 7 8 6 8-6" stroke="currentColor" stroke-width="1.6" fill="none"/>
             </svg>
             Email
           </a>
-          <a href="https://www.linkedin.com/in/divylimbachiya1207" target="_blank" rel="noopener" aria-label="LinkedIn" class="social">
-            <!-- LinkedIn SVG -->
-            <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
-              <path fill="currentColor" d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V23h-4V8zm7.5 0h3.8v2.05h.05c.53-1 1.82-2.05 3.75-2.05C20.4 8 23 10.05 23 14.3V23h-4v-7.4c0-1.75-.03-4-2.45-4-2.45 0-2.82 1.9-2.82 3.9V23h-4V8z"/>
-            </svg>
+          <a href="https://www.linkedin.com/in/divylimbachiya1207" target="_blank" rel="noopener" aria-label="LinkedIn">
+            <i class="devicon-linkedin-plain"></i>
             LinkedIn
           </a>
-          <a href="https://github.com/Divy1207" target="_blank" rel="noopener" aria-label="GitHub" class="social">
-            <!-- GitHub SVG -->
-            <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
-              <path fill="currentColor" d="M12 .5a12 12 0 0 0-3.79 23.4c.6.1.82-.26.82-.58v-2.2c-3.34.73-4.04-1.6-4.04-1.6-.55-1.4-1.35-1.77-1.35-1.77-1.1-.77.08-.76.08-.76 1.22.08 1.86 1.26 1.86 1.26 1.08 1.85 2.83 1.32 3.52 1.01.11-.78.43-1.32.77-1.62-2.67-.31-5.47-1.34-5.47-5.96 0-1.32.47-2.39 1.25-3.23-.13-.31-.54-1.56.12-3.25 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 0 1 6 0c2.3-1.55 3.3-1.23 3.3-1.23.66 1.69.25 2.94.12 3.25.78.84 1.25 1.91 1.25 3.23 0 4.63-2.8 5.65-5.48 5.96.44.38.83 1.12.83 2.26v3.35c0 .32.21.69.83.57A12 12 0 0 0 12 .5Z"/>
-            </svg>
+          <a href="https://github.com/Divy1207" target="_blank" rel="noopener" aria-label="GitHub">
+            <i class="devicon-github-original"></i>
             GitHub
           </a>
         </div>
+      </div> <!-- hero-text -->
+    </section>
+
+    <section id="about" class="container section reveal" class="container section">
+      <h2>About</h2>
+      <p>
+        Data Engineer with experience across AWS, Azure, Snowflake, and Databricks. Built ELT and streaming pipelines, implemented data governance with row level security and IAM roles, and enabled analytics with dbt and BI tools. Interested in ML applications in production data systems.
+      </p>
       </div>
     </section>
 
-    <!-- The rest of the content stays the same (placeholders kept short here) -->
-    <section id="about" class="container section reveal">
-      <h2>About</h2>
-      <p>Data Engineer with experience across AWS, Azure, Snowflake, and Databricks.</p>
+    <section id="skills" class="container section reveal" class="container section">
+      <h2>Skills</h2>
+      <div class="chips">
+        <span class="chip">Python</span>
+        <span class="chip">SQL</span>
+        <span class="chip">PySpark</span>
+        <span class="chip">SparkSQL</span>
+        <span class="chip">dbt</span>
+        <span class="chip">Snowflake</span>
+        <span class="chip">Databricks</span>
+        <span class="chip">Microsoft Fabric</span>
+        <span class="chip">Airflow</span>
+        <span class="chip">AWS</span>
+        <span class="chip">Azure</span>
+        <span class="chip">GCP</span>
+        <span class="chip">Kafka</span>
+        <span class="chip">Kinesis</span>
+        <span class="chip">Redshift</span>
+        <span class="chip">Glue</span>
+        <span class="chip">EMR</span>
+        <span class="chip">Delta Lake</span>
+        <span class="chip">Docker</span>
+        <span class="chip">Terraform</span>
+        <span class="chip">Power BI</span>
+        <span class="chip">Tableau</span>
+        <span class="chip">Looker</span>
+      </div>
+    </section>
+
+    <section id="toolbox" class="container section reveal" class="container section">
+      <h2>Tech Toolbox</h2>
+      <ul class="logo-grid" aria-label="Technologies and tools">
+        <li title="Apache Airflow"><i class="devicon-apacheairflow-plain"></i><span>Airflow</span></li>
+        <li title="Docker"><i class="devicon-docker-plain"></i><span>Docker</span></li>
+        <li title="Kubernetes"><i class="devicon-kubernetes-plain"></i><span>Kubernetes</span></li>
+        <li title="dbt"><i class="devicon-dbt-plain"></i><span>dbt</span></li>
+        <li title="Amazon Web Services"><i class="devicon-amazonwebservices-original"></i><span>AWS</span></li>
+        <li title="Microsoft Azure"><i class="devicon-azure-plain"></i><span>Azure</span></li>
+        <li title="Google Cloud"><i class="devicon-googlecloud-plain"></i><span>GCP</span></li>
+        <li title="Databricks"><i class="devicon-databricks-original"></i><span>Databricks</span></li>
+        <li title="Power BI"><i class="devicon-powerbi-plain"></i><span>Power BI</span></li>
+        <li title="Tableau"><i class="devicon-tableau-original"></i><span>Tableau</span></li>
+        <li title="Snowflake"><i class="devicon-snowflake-plain"></i><span>Snowflake</span></li>
+        <li title="Prefect"><span class="text-badge">Prefect</span></li>
+        <li title="AWS Lambda"><span class="text-badge">Lambda</span></li>
+        <li title="Amazon S3"><span class="text-badge">S3</span></li>
+        <li title="Azure Data Factory"><span class="text-badge">ADF</span></li>
+      </ul>
+    </section>
+
+    <section id="projects" class="container section reveal" class="container section">
+      <h2>Projects</h2>
+      <div class="grid">
+        <article class="card reveal">
+          <h3>Data Solutions Architecture on AWS</h3>
+          <p>Integrated S3 bronze and silver layers with Redshift Serverless for gold analytics. Automated near real time pipelines with Glue, Lambda, SQS, and SNS. Centralized metadata with Glue and enabled predictive modeling with SageMaker.</p>
+          <ul class="meta">
+            <li>Stack: AWS S3, Glue, Redshift, Lambda, SageMaker</li>
+            <li>Outcome: Automated ingestion and accelerated ML insights</li>
+          </ul>
+          <img src="aws-architecture.png" alt="AWS Data Architecture" class="project-img"/>
+          <div class="links">
+            <a class="btn btn-small" href="https://github.com/Divy1207/AWS-Data-Engineering" target="_blank" rel="noopener">GitHub Repo</a>
+          </div>
+        </article>
+        <article class="card reveal">
+          <h3>Streaming ELT to Snowflake</h3>
+          <p>Deployed real time streaming pipelines with Confluent Kafka and Databricks. Implemented Snowpipe ingestion and built dbt models with SCD Type 2 snapshots and materialized views to support ad hoc analysis.</p>
+          <ul class="meta">
+            <li>Stack: Kafka, Databricks, Snowflake, dbt</li>
+            <li>Outcome: Near real time analytics</li>
+          </ul>
+        </article>
+        <article class="card reveal">
+          <h3>Performance Tuning for Spark Workloads</h3>
+          <p>Engineered lakehouse architecture with ACID guarantees and tuned Spark to reduce runtime. Applied partitioning and bucketing strategies to improve processing efficiency.</p>
+          <ul class="meta">
+            <li>Stack: Delta Lake, Spark, Databricks</li>
+            <li>Outcome: 25 percent lower runtime</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+
+<section id="experience" class="container section reveal">
+  <h2>Experience</h2>
+  <ul class="timeline">
+    <li>
+      <div class="tl-dot"></div>
+      <div class="tl-content">
+        <h3>Data Engineer, Upwork</h3>
+        <p class="tl-sub">Remote, Sep 2024 to Present</p>
+      </div>
+    </li>
+    <li>
+      <div class="tl-dot"></div>
+      <div class="tl-content">
+        <h3>Data Engineering Apprenticeship, TrendyTech</h3>
+        <p class="tl-sub">Remote, Apr 2024 to Dec 2024</p>
+      </div>
+    </li>
+    <li>
+      <div class="tl-dot"></div>
+      <div class="tl-content">
+        <h3>Data Analytics Engineering Intern, Adani Ports</h3>
+        <p class="tl-sub">Ahmedabad, Sep 2022 to Nov 2022</p>
+      </div>
+    </li>
+    <li>
+      <div class="tl-dot"></div>
+      <div class="tl-content">
+        <h3>Data Analyst, Visat IT Solutions</h3>
+        <p class="tl-sub">Ahmedabad, Jan 2021 to Aug 2022</p>
+      </div>
+    </li>
+  </ul>
+</section>
+
+    <section id="education" class="container section reveal" class="container section">
+      <h2>Education</h2>
+      <ul class="edu-list">
+        <li><strong>Cloud Computing Technologies</strong> :George Brown College, Toronto (Jan 2024 to Dec 2024)</li>
+        <li><strong>Data Analytics</strong> :Durham College, Oshawa (Jan 2023 to Sep 2023)</li>
+        <li><strong>BSc in Mathematics, Statistics, Physics</strong> :M.S. University of Baroda, India (Jun 2018 to May 2021)</li>
+      </ul>
+    </section>
+
+    <section id="certs" class="container section reveal" class="container section">
+      <h2>Certifications</h2>
+      <ul class="edu-list">
+        <li>AWS Certified Data Engineer</li>
+        <li>Microsoft Certified Analytics Engineer, DP 600</li>
+        <li>Databricks Lakehouse Fundamentals</li>
+      </ul>
+    </section>
+
+    <section id="achievements" class="container section reveal" class="container section">
+      <h2>Achievements</h2>
+      <ul class="edu-list">
+        <li>Alleviated data anomalies by 40 percent and resolved 80 percent of integrity discrepancies.</li>
+        <li>Mitigated storage costs by 30 percent through archival and lifecycle policies.</li>
+      </ul>
+    </section>
+
+    <section id="contact" class="container section reveal" class="container section">
+      <h2>Contact</h2>
+      <div class="contact-grid">
+        <div>
+          <p>Email: <a href="mailto:connect2.divy@gmail.com">connect2.divy@gmail.com</a></p>
+          <p>Location: Ontario, Canada</p>
+        </div>
+        <div>
+          <form id="contactForm" class="contact-form" netlify>
+            <div class="row">
+              <label>
+                <span>Name</span>
+                <input type="text" name="name" required>
+              </label>
+              <label>
+                <span>Email</span>
+                <input type="email" name="email" required>
+              </label>
+            </div>
+            <label>
+              <span>Message</span>
+              <textarea name="message" rows="5" required></textarea>
+            </label>
+            <button type="submit" class="btn">Send</button>
+            <p id="formStatus" class="status" role="status" aria-live="polite"></p>
+          </form>
+          <div class="socials">
+            <a href="https://github.com/Divy1207" target="_blank" rel="noopener">GitHub</a>
+            <a href="https://www.linkedin.com/in/divylimbachiya1207" target="_blank" rel="noopener">LinkedIn</a>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
   <footer class="container footer">
     <p>&copy; <span id="year"></span> Divy Limbachiya. All rights reserved.</p>
   </footer>
-
-  <script>
-    // set year
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
