--- a/index.html
+++ b/index.html
@@ -22,45 +22,27 @@
       <button id="themeToggle" class="btn btn-ghost" aria-label="Toggle theme">Theme</button>
     </nav>
   </header>
-
   <main id="home">
     <section class="container hero">
       <div class="hero-text">
         <img src="profile.png" alt="Profile picture" class="profile-pic">
         <h1>Divy Limbachiya</h1>
         <p class="subtitle">Certified Data professional with experience in building scalable data solutions and automated workflows.</p>
-
         <div class="pill-row">
           <span class="pill">Ontario, Canada</span>
           <span class="pill">Open to Data Engineer, Data Analyst and Analytics Engineer roles</span>
           <span class="pill">Focus areas: AWS, Azure, Snowflake, Databricks, dbt</span>
         </div>
-
         <div class="cta">
           <a href="#projects" class="btn">View Projects</a>
         </div>
-
+        
         <div class="socials">
-          <a href="mailto:connect2.divy@gmail.com" aria-label="Email">
-            <!-- envelope svg -->
-            <svg class="ico" width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-              <path d="M3 7.5a2.5 2.5 0 0 1 2.5-2.5h13A2.5 2.5 0 0 1 21 7.5v9A2.5 2.5 0 0 1 18.5 19h-13A2.5 2.5 0 0 1 3 16.5v-9Z" stroke="currentColor" stroke-width="1.6" />
-              <path d="m4 7 8 6 8-6" stroke="currentColor" stroke-width="1.6" fill="none"/>
-            </svg>
-            Email
-          </a>
-          <a href="https://www.linkedin.com/in/divylimbachiya1207" target="_blank" rel="noopener" aria-label="LinkedIn">
-            <i class="devicon-linkedin-plain"></i>
-            LinkedIn
-          </a>
-          <a href="https://github.com/Divy1207" target="_blank" rel="noopener" aria-label="GitHub">
-            <i class="devicon-github-original"></i>
-            GitHub
-          </a>
+          <a href="mailto:connect2.divy@gmail.com" aria-label="Email">Email</a>
+          <a href="https://www.linkedin.com/in/divylimbachiya1207" target="_blank" rel="noopener" aria-label="LinkedIn">LinkedIn</a>
+          <a href="https://github.com/Divy1207" target="_blank" rel="noopener" aria-label="GitHub">GitHub</a>
         </div>
-      </div> <!-- hero-text -->
     </section>
-
     <section id="about" class="container section reveal" class="container section">
       <h2>About</h2>
       <p>
@@ -68,7 +50,6 @@
       </p>
       </div>
     </section>
-
     <section id="skills" class="container section reveal" class="container section">
       <h2>Skills</h2>
       <div class="chips">
@@ -97,7 +78,6 @@
         <span class="chip">Looker</span>
       </div>
     </section>
-
     <section id="toolbox" class="container section reveal" class="container section">
       <h2>Tech Toolbox</h2>
       <ul class="logo-grid" aria-label="Technologies and tools">
@@ -118,7 +98,6 @@
         <li title="Azure Data Factory"><span class="text-badge">ADF</span></li>
       </ul>
     </section>
-
     <section id="projects" class="container section reveal" class="container section">
       <h2>Projects</h2>
       <div class="grid">
@@ -152,7 +131,6 @@
         </article>
       </div>
     </section>
-
 <section id="experience" class="container section reveal">
   <h2>Experience</h2>
   <ul class="timeline">
@@ -186,7 +164,6 @@
     </li>
   </ul>
 </section>
-
     <section id="education" class="container section reveal" class="container section">
       <h2>Education</h2>
       <ul class="edu-list">
@@ -195,7 +172,6 @@
         <li><strong>BSc in Mathematics, Statistics, Physics</strong> :M.S. University of Baroda, India (Jun 2018 to May 2021)</li>
       </ul>
     </section>
-
     <section id="certs" class="container section reveal" class="container section">
       <h2>Certifications</h2>
       <ul class="edu-list">
@@ -204,7 +180,6 @@
         <li>Databricks Lakehouse Fundamentals</li>
       </ul>
     </section>
-
     <section id="achievements" class="container section reveal" class="container section">
       <h2>Achievements</h2>
       <ul class="edu-list">
@@ -212,12 +187,12 @@
         <li>Mitigated storage costs by 30 percent through archival and lifecycle policies.</li>
       </ul>
     </section>
-
     <section id="contact" class="container section reveal" class="container section">
       <h2>Contact</h2>
       <div class="contact-grid">
         <div>
           <p>Email: <a href="mailto:connect2.divy@gmail.com">connect2.divy@gmail.com</a></p>
+          
           <p>Location: Ontario, Canada</p>
         </div>
         <div>
@@ -247,7 +222,6 @@
       </div>
     </section>
   </main>
-
   <footer class="container footer">
     <p>&copy; <span id="year"></span> Divy Limbachiya. All rights reserved.</p>
   </footer>
