--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Divy Limbachiya | Data Engineer</title>
+  <title>Divy Limbachiya </title>
   <meta name="description" content="Portfolio of Divy Limbachiya, AWS Certified Data Engineer. Projects, experience, skills, and contact.">
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='18' fill='%230a0a0a'/%3E%3Ctext x='50' y='58' text-anchor='middle' font-family='Arial' font-size='44' fill='white'%3EDL%3C/text%3E%3C/svg%3E">
   <link rel="stylesheet" href="styles.css">
