--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <ul class="logo-grid" aria-label="Technologies and tools">
         <li title="Apache Airflow"><i class="devicon-apacheairflow-plain"></i><span>Airflow</span></li>
         <li title="Docker"><i class="devicon-docker-plain"></i><span>Docker</span></li>
-        <li title="Kubernetes"><i class="devicon-kubernetes-plain"></i><span>Kubernetes</span></li>
+        <li title="K8s"><i class="devicon-kubernetes-plain"></i><span>Kubernetes</span></li>
         <li title="dbt"><i class="devicon-dbt-plain"></i><span>dbt</span></li>
         <li title="Amazon Web Services"><i class="devicon-amazonwebservices-original"></i><span>AWS</span></li>
         <li title="Microsoft Azure"><i class="devicon-azure-plain"></i><span>Azure</span></li>
