--- a/index.html
+++ b/index.html
@@ -38,10 +38,25 @@
         </div>
         
         <div class="socials">
-          <a href="mailto:connect2.divy@gmail.com" aria-label="Email">Email</a>
-          <a href="https://www.linkedin.com/in/divylimbachiya1207" target="_blank" rel="noopener" aria-label="LinkedIn">LinkedIn</a>
-          <a href="https://github.com/Divy1207" target="_blank" rel="noopener" aria-label="GitHub">GitHub</a>
-        </div>
+  <a href="mailto:connect2.divy@gmail.com" class="btn-ghost" aria-label="Email">
+    <span class="icon" aria-hidden="true">
+      <!-- Envelope icon -->
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" role="img">
+        <path d="M4 6h16a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2z" stroke="currentColor" stroke-width="1.6" />
+        <path d="M22 8l-9.2 6.9a2 2 0 0 1-2.4 0L2 8" stroke="currentColor" stroke-width="1.6" />
+      </svg>
+    </span>
+    Email
+  </a>
+  <a href="https://www.linkedin.com/in/divylimbachiya1207" target="_blank" rel="noopener" class="btn-ghost" aria-label="LinkedIn">
+    <i class="devicon-linkedin-plain" aria-hidden="true"></i>
+    LinkedIn
+  </a>
+  <a href="https://github.com/Divy1207" target="_blank" rel="noopener" class="btn-ghost" aria-label="GitHub">
+    <i class="devicon-github-original" aria-hidden="true"></i>
+    GitHub
+  </a>
+</div>
     </section>
     <section id="about" class="container section reveal" class="container section">
       <h2>About</h2>
